RESOLVED FIXED25875
Ctrl+mousewheel zooming works in reverse from other Windows browsers (affects multitouch zooming on Windows 7)
https://bugs.webkit.org/show_bug.cgi?id=25875
Summary Ctrl+mousewheel zooming works in reverse from other Windows browsers (affects...
Adam Roben (:aroben)
Reported 2009-05-19 14:49:19 PDT
To reproduce: 1. Go to http://webkit.org/ 2. Hold down the Control key and scroll the mouse wheel away from you The webpage zooms out. But in other web browsers on Windows, the page zooms in. This also causes multitouch zooming on Windows 7 to work in reverse, because the system translates multitouch scrolls into Ctrl+mousewheel events automatically.
Attachments
Patch (1.18 KB, patch)
2009-06-16 14:18 PDT, Brian Weinstein
aroben: review+
David Kilzer (:ddkilzer)
Comment 1 2009-05-19 14:52:36 PDT
Brian Weinstein
Comment 2 2009-06-16 14:18:08 PDT
Adam Roben (:aroben)
Comment 3 2009-06-16 14:19:26 PDT
Comment on attachment 31370 [details] Patch r=me
Brian Weinstein
Comment 4 2009-06-16 14:40:48 PDT
Committed in revision 44739
Note You need to log in before you can comment on or make changes to this bug.