2009-06-16  Brian Weinstein  <bweinstein@apple.com>

Reviewed by Adam Roben.

        Switch Control+Mousewheel Zooming definitions to match other browsers on Windows.
        Control+Mousewheel-Down now zooms out, Control+Mousewheel-Up now zooms in.
        https://bugs.webkit.org/show_bug.cgi?id=25875.
        <rdar://problem/6903976>

        * WebView.cpp:
        (WebView::mouseWheel):



Canonical link: https://commits.webkit.org/36555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44739 268f45cc-cd09-0410-ab3c-d52691b4dbfc